<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>jp.nhiguchi.libs</groupId>
	<artifactId>logpro</artifactId>
	<version>0.2</version>
	<packaging>jar</packaging>

	<name>logpro</name>
	<url>http://maven.apache.org</url>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>jp.nhiguchi.libs</groupId>
			<artifactId>tuple</artifactId>
			<version>0.2</version>
		</dependency>
		<dependency>
			<groupId>jp.nhiguchi.libs</groupId>
			<artifactId>flist</artifactId>
			<version>0.3</version>
		</dependency>
		<dependency>
			<groupId>jp.nhiguchi.libs</groupId>
			<artifactId>pcom</artifactId>
			<version>0.2</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.14.4</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>26</source>
					<target>26</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.2</version>
			</plugin>
		</plugins>
	</build>
</project>
